[package]
name = "pgsql"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "json"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
futures = "0.3"
thiserror = "1.0.64"
tokio-postgres = "0.7.12"
postgres-native-tls = "0.5.0"
postgres = "0.19.9"
native-tls = "0.2.12"
tracing = "0.1.40"
